box.yaml

apiVersion: v1
kind: Pod
metadata:
  name: box
  labels:
    app: box
spec:
  containers:
  - image: bash
    imagePullPolicy: IfNotPresent
    command: [ "echo" ]
    args: [ "Vault: $(VAULT_PASSWORD) AWS_SSM: $(SSM_PASSWORD)"]
    name: box
  restartPolicy: Always
