mutate_admission.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mutating-webhook
  namespace: test
webhooks:
  - name: test.mutate.com
    failurePolicy: Fail
    admissionReviewVersions: ["v1"]
    sideEffects: None
    clientConfig:
      service:
        name: mutate-webhook-svc
        namespace: default
        path: /mutate/pods
      caBundle: ${CA_BUNDLE}
    rules:
      - apiGroups:
          - "*"
        resources:
          - "pods"
        apiVersions: ["v1"]
        operations:
          - CREATE
