mutate_admission_ca.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mutating-webhook
  namespace: test
webhooks:
  - name: test.mutate.com
    failurePolicy: Fail
    admissionReviewVersions: ["v1"]
    sideEffects: None
    clientConfig:
      service:
        name: mutate-webhook-svc
        namespace: default
        path: /mutate/pods
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUN5RENDQWJDZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwcmRXSmwKY201bGRHVnpNQjRYRFRJd01URXhOREE1TXpBeU5sb1hEVE13TVRFeE1qQTVNekF5Tmxvd0ZURVRNQkVHQTFVRQpBeE1LYTNWaVpYSnVaWFJsY3pDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTUgyCmNLcVA5WkVnOUNyM2RoNG5VOG5KaWtFUGtIVHRaSlNQNWtsc0dGN3R3aUx3eUhZaVUwaERqeUxwUHVQdkE1OVIKbVp4Tkw2bFNOMVRNZGUwQ0VHUy9HbFJPZmx0a3dXazhRZzc4cDZVMGQ3S2FLU0NPTS8wRkZ0d1BJT2UyaDZIMAptZjAydXBpQmRP [...]
    rules:
      - apiGroups:
          - "*"
        resources:
          - "pods"
        apiVersions: ["v1"]
        operations:
          - CREATE
